cards matching game

--- a/meal-finder/index.html
+++ b/meal-finder/index.html
@@ -28,7 +28,7 @@
           <i class="fas fa-random"></i>
         </button>
       </div>
-      <div class="result-heading"></div>
+      <div id="result-heading"></div>
       <div id="meals" class="meals"></div>
       <div id="single-meal"></div>
     </div>
